W01 | Home Page | fix layout shift issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* #region global */
 *,
 ::before,
 ::after {
@@ -46,6 +47,8 @@ ul {
     padding-left: 16px;
 }
 
+/* #endregion global */
+/* #region header */
 header {
     background-color: var(--dark-green);
     display: flex;
@@ -74,7 +77,7 @@ header {
 
 #title {
     color: var(--off-white);
-    font-family: 'Lora', serif;
+    font-family: 'Lora', Times, serif;
     font-size: 2rem;
     margin: auto 0.25rem;
     text-align: center;
@@ -83,26 +86,31 @@ header {
 
 #menu {
     background-color: var(--medium-green);
-    border-radius: 12px;
+    border-radius: 8px;
     color: var(--white);
     font-family: 'Cousine', monospace;
-    font-size: 1.5rem;
-    height: 32px;
+    font-size: 1.25rem;
+    height: 24px;
     position: absolute;
     right: 0.5rem;
     top: 0.5rem;
-    width: 22px;
+    width: 24px;
     z-index: 1;
 }
 
 #menu::before {
     content: '☰';
+    position: relative;
+    top: -2.75px;
 }
 
 #menu.open::before {
     content: 'X';
+    top: -0.25px;
 }
 
+/* #endregion header*/
+/* #region nav */
 nav {
     background-color: var(--dark-green);
     border-bottom: 1px solid var(--dark-green);
@@ -131,7 +139,7 @@ nav {
 }
 
 .open .nav-link,
-.clicked .hover-text {
+.clicked .popup {
     display: flex;
 }
 
@@ -154,6 +162,8 @@ nav {
     text-shadow: none;
 }
 
+/* #endregion nav */
+/* #region main */
 main {
     background-color: var(--tan);
     padding: 4px 2px;
@@ -170,41 +180,62 @@ h2 {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     color: var(--off-white);
-    font-family: 'Lora', serif;
+    font-family: 'Lora', Times, serif;
     font-size: 1.5rem;
     padding: 15px;
     text-align: center;
 }
 
+/* #endregion main*/
+/* #region map*/
+
 #location-map {
     display: flex;
     flex-direction: column;
-    gap: 16px;
-    padding: 16px;
     text-align: center;
 }
 
-#location a {
-    display: block;
+#map-picture {
+    display: inline-block;
+    padding: 8px;
 }
 
-#location img {
-    border-radius: 4px;
+#map-img {
+    width: 100%;
+    height: 100%;
     box-shadow: 2px 2px 4px var(--shadow);
-    height: auto;
-    width: 91%;
 }
 
-#location span {
-    font-size: 0.9rem;
+#map-caption {
+    margin-top: 4px;
 }
 
-#certificate h2 span {
+#map-source {
+    font-size: 0.8rem;
+    margin-bottom: 4px;
+}
+
+/* #endregion map*/
+/* #region courses */
+#cert-header {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--dark-green);
+    color: var(--off-white);
+}
+
+#certificate h2 {
+    padding-bottom: 0;
+}
+
+#credits-left {
     font-size: 1.125rem;
     font-style: italic;
+    text-align: center;
+    padding: 4px;
 }
 
-#certificate>div {
+#course-info-box {
     display: grid;
 }
 
@@ -248,11 +279,20 @@ h2 {
     padding: 12px 16px 16px;
 }
 
+.loading {
+    height: 409px;
+}
+
 .show-info {
     border-radius: 8px;
     font-size: 1.5rem;
     padding: 8px;
     text-align: center;
+}
+
+.show-info span {
+    width: 100.8px;
+    height: 27.5px;
 }
 
 .show-info:hover {
@@ -274,7 +314,9 @@ h2 {
     font-style: italic;
 }
 
-.hover-text {
+/* #endregion courses */
+/* #region popup */
+.popup {
     background-image: linear-gradient(#00000015, #ffffff15, #00000015), linear-gradient(120deg, #2020202a, #dfdfdf2a, #2020202a), linear-gradient(240deg, #4040403f, #bfbfbf3f, #4040403f);
     cursor: default;
     display: none;
@@ -312,7 +354,7 @@ h2 {
     background-color: var(--red);
 }
 
-.hover-text div {
+.popup-text {
     background-color: var(--dark-green);
     border: 4px solid var(--bright-yellow);
     border-radius: 8px;
@@ -327,24 +369,26 @@ h2 {
     width: 75%;
 }
 
-.hover-text h3 {
+.popup-text h3 {
     font-size: 1.75rem;
     text-align: center;
 }
 
-.hover-text span {
+.popup-text span {
     font-size: 1.25rem;
 }
 
-.hover-text hr {
+.popup-text hr {
     border: 1px solid var(--bright-yellow);
     margin: 8px -4px;
 }
 
-.hover-text ul {
+.popup-text ul {
     padding-left: 11px;
 }
 
+/* #endregion popup */
+/* #region footer */
 footer {
     background-color: var(--dark-green);
     display: flex;
@@ -373,3 +417,5 @@ footer {
     font-size: 0.9rem;
     margin-top: 8px;
 }
+
+/* #endregion footer */
